# dashboard_dane_gus

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  Untitled.ipynb  app.py  fetch_data_gus.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: refresh_data.yml
.virtual_documents/: Untitled.ipynb  fetch_data_gus.ipynb
data/: gus_data.parquet  last_refresh.txt
scripts/: fetch_gus.py
