[project]
name = "dashboard-dane-gus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "streamlit>=1.45",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
override-dependencies = ["pandas>=3.0.1"]
